--- a/web/responsive-webpage/index.html
+++ b/web/responsive-webpage/index.html
@@ -101,10 +101,10 @@
             </ul>
 
             <ul class="footer-social">
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
             </ul>
         </footer>
     </main>
